samples/_failures_safe/1761465081_4766c6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5706947b.c: In function ‘main’:
./samples/SAFE/__tmp_5706947b.c:143:12: error: missing terminating " character
  143 |     printf("\nEnter level to filter by (DEBUG
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5706947b.c:143:5: error: expected expression at end of input
  143 |     printf("\nEnter level to filter by (DEBUG
      |     ^~~~~~
./samples/SAFE/__tmp_5706947b.c:143:5: error: expected declaration or statement at end of input
